[package]
name = "prime-portraits"
version = "0.1.0"
edition = "2021"
authors = ["Fraol Lemecha","frectonz <fraol0912@gmail.com>"]
description = "A program that turns images into prime numbers."
license = "MIT"
homepage = "https://github.com/frectonz/prime-portraits/"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
color-eyre = "0.6.2"
image = "0.24.7"
num-bigint = "0.4.4"
num-bigint-dig = { version = "0.8.4", features = ["prime"] }
num-traits = "0.2.17"
